--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.thomasdarimont.aswtraining</groupId>
 	<artifactId>asw-web2-2018</artifactId>
@@ -13,11 +15,11 @@
 		<module>example-400-spring-minimal-app</module>
 		<module>example-410-spring-hello-world</module>
 		<module>example-420-spring-restcontroller</module>
-    <module>example-311-javaee-servlet-calculator-form</module>
-    <module>example-315-javaee-tracing-servlet-filter</module>
-    <module>example-320-javaee-servlet-context-listener</module>
-    <module>example-325-javaee-servlet-http-sessions</module>
-    <module>example-328-javaee-servlet-redirects</module>
-    <module>example-330-javaee-servlet-cookies</module>
-  </modules>
+		<module>example-311-javaee-servlet-calculator-form</module>
+		<module>example-315-javaee-tracing-servlet-filter</module>
+		<module>example-320-javaee-servlet-context-listener</module>
+		<module>example-325-javaee-servlet-http-sessions</module>
+		<module>example-328-javaee-servlet-redirects</module>
+		<module>example-330-javaee-servlet-cookies</module>
+	</modules>
 </project>
