--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,8 @@
     <module>lab-378-javaee-jsp-system-properties</module>
     <module>lab-390-javaee-servlet-number-game</module>
     <module>example-402-spring-dependency-injection-simple</module>
+    <module>
+    	example-403-spring-dependency-injection-with-scanning
+    </module>
 	</modules>
 </project>
