--- a/example-423-spring-restcontroller-validation/pom.xml
+++ b/example-423-spring-restcontroller-validation/pom.xml
@@ -1,15 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.github.thomasdarimont</groupId>
-	<artifactId>example-425-spring-mvc-intro</artifactId>
+	<groupId>com.github.thomasdarimont.aswtraining</groupId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
-	<description>Demo project for Spring Boot</description>
+	<artifactId>example-423-spring-restcontroller-validation</artifactId>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -28,11 +23,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 		<dependency>
@@ -55,6 +45,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
