--- a/example-200-java-refresher/pom.xml
+++ b/example-200-java-refresher/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.github.thomasdarimont.aswtraining</groupId>
-    <artifactId>asw-web2-2018</artifactId>
+    <artifactId>asw-web2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>example-200-java-refresher</artifactId>
