--- a/example-311-javaee-servlet-calculator-form/pom.xml
+++ b/example-311-javaee-servlet-calculator-form/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>asw-web2-2018</artifactId>
+		<artifactId>asw-web2</artifactId>
 		<groupId>com.github.thomasdarimont.aswtraining</groupId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
