--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.thomasdarimont.aswtraining</groupId>
-    <artifactId>asw-web2-2018</artifactId>
+    <artifactId>asw-web2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>asw-web2-2018</name>
+    <name>asw-web2-2019</name>
 
     <modules>
         <module>example-200-java-refresher</module>
