--- a/example-445-spring-web-jsp/pom.xml
+++ b/example-445-spring-web-jsp/pom.xml
@@ -51,6 +51,14 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+       
     </dependencies>
 
     <build>
