--- a/lab-360-javaee-servlet-handoff/pom.xml
+++ b/lab-360-javaee-servlet-handoff/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>asw-web2-2018</artifactId>
-    <groupId>com.github.thomasdarimont.aswtraining</groupId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+        <artifactId>asw-web2</artifactId>
+        <groupId>com.github.thomasdarimont.aswtraining</groupId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
     <artifactId>lab-360-javaee-servlet-handoff</artifactId>
     <packaging>war</packaging>
     <dependencies>
