Fix parent project references

--- a/C10_Java_Grundlagen/example-200-java-refresher/pom.xml
+++ b/C10_Java_Grundlagen/example-200-java-refresher/pom.xml
@@ -4,6 +4,7 @@
     <groupId>com.github.thomasdarimont.aswtraining</groupId>
     <artifactId>asw-web2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>example-200-java-refresher</artifactId>
 </project>
