--- a/D10_Backend_JavaEE/example-315-javaee-tracing-servlet-filter/pom.xml
+++ b/D10_Backend_JavaEE/example-315-javaee-tracing-servlet-filter/pom.xml
@@ -5,6 +5,7 @@
         <artifactId>asw-web2</artifactId>
         <groupId>com.github.thomasdarimont.aswtraining</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>example-315-javaee-tracing-servlet-filter</artifactId>
     <packaging>war</packaging>
