--- a/D10_Backend_JavaEE/example-311-javaee-servlet-calculator-form/pom.xml
+++ b/D10_Backend_JavaEE/example-311-javaee-servlet-calculator-form/pom.xml
@@ -7,6 +7,7 @@
 		<artifactId>asw-web2</artifactId>
 		<groupId>com.github.thomasdarimont.aswtraining</groupId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>example-311-javaee-servlet-calculator-form</artifactId>
 	<packaging>war</packaging>
