--- a/D10_Backend_JavaEE/example-328-javaee-servlet-redirects/pom.xml
+++ b/D10_Backend_JavaEE/example-328-javaee-servlet-redirects/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>asw-web2</artifactId>
         <groupId>com.github.thomasdarimont.aswtraining</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>example-328-javaee-servlet-redirects</artifactId>
     <packaging>war</packaging>
