--- a/D10_Backend_JavaEE/example-330-javaee-servlet-cookies/pom.xml
+++ b/D10_Backend_JavaEE/example-330-javaee-servlet-cookies/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>asw-web2</artifactId>
         <groupId>com.github.thomasdarimont.aswtraining</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>example-330-javaee-servlet-cookies</artifactId>
     <packaging>war</packaging>
