--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <module>E10_Backend_SpringBoot/example-452-spring-todomvc-simple-client</module>
         <module>E10_Backend_SpringBoot/example-453-spring-todomvc-webui</module>
         <module>E10_Backend_SpringBoot/example-814-spring-web-excel-export</module>
+        <module>L10_Labs/lab-110-http-requests-example-server</module>
         <module>L10_Labs/lab-310-javaee-servlet-dynamic-table</module>
         <module>L10_Labs/lab-350-javaee-servlet-meeting-planner</module>
         <module>L10_Labs/lab-360-javaee-servlet-handoff</module>
