--- a/D10_Backend_JavaEE/example-340-javaee-servlet-guess-number/pom.xml
+++ b/D10_Backend_JavaEE/example-340-javaee-servlet-guess-number/pom.xml
@@ -20,6 +20,23 @@
     </dependencies>
     <build>
         <finalName>example-340-javaee-servlet-guess-number</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <configuration>
+                    <scanIntervalSeconds>${jetty.scanIntervalSeconds}</scanIntervalSeconds>
+                    <scanTargetPatterns>
+                        <scanTargetPattern>
+                            <directory>${project.basedir}</directory>
+                            <includes>
+                                <include>**/target/classes/**/*.class</include>
+                            </includes>
+                        </scanTargetPattern>
+                    </scanTargetPatterns>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
     <properties>
         <failOnMissingWebXml>false</failOnMissingWebXml>
