--- a/E10_Backend_SpringBoot/example-510-url-shorty-complete/pom.xml
+++ b/E10_Backend_SpringBoot/example-510-url-shorty-complete/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.thomasdarimont.training</groupId>
-    <artifactId>url-shorty</artifactId>
+    <artifactId>example-510-url-shorty-complete</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>url-shorty</name>
     <description>Demo project for Spring Boot</description>
